# Spaccilator

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.cache/clangd/index/: Parser.hpp.210DA02ED2CC6B24.idx  main.cpp.F2A2A7AA5FB62E51.idx
include/: Lexer.hpp  Parser.hpp  Utils.hpp
src/: Lexer.cpp  Parser.cpp
